Conda Command Updates

--- a/conda-commands.ipynb
+++ b/conda-commands.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### List All Conda Packages"
+    "# Note :- use \"!\" before conda & pip command in Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List All Conda Packages "
    ]
   },
   {
@@ -270,6 +277,64 @@
    ],
    "source": [
     "! conda list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Upgrade one Conda Packages\n",
+    "-  conda upgrade package_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Upgrade all Conda packages\n",
+    "-  conda upgrade conda\n",
+    "-  conda upgrade --all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install a conda Package\n",
+    "-  conda install package_name like conda install numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install Multiple Packages\n",
+    "-  conda install numpy pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install Packages with Specific Version\n",
+    "-  conda numpy version=1.10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove Package Name\n",
+    "-  conda remove package_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Search Package Name \n",
+    "-  conda search *search_term*\n",
+    "-  conda search *beautifulsoup*"
    ]
   },
   {
