--- a/conda-commands.ipynb
+++ b/conda-commands.ipynb
@@ -338,6 +338,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Installing Jupyter Notebook\n",
+    "-  conda install jupyter notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Installing Notebook Conda in Jupyter\n",
+    "-  conda install nb_conda"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
